--- a/source/_posts/这些单词你都读对了吗？（一）.md
+++ b/source/_posts/这些单词你都读对了吗？（一）.md
@@ -1,12 +1,16 @@
-title: 这些单词你都读对了吗？
+title: 这些单词你都读对了吗？（一）
 layout: post
 comment: true
 date: 2015-08-06 20:22:45
 categories: 英语
 tags: [English]
-keywords: pronouncation
+keywords: pronunciation
 description: 英语发音纠正
 ---
+这里面有我们常见的、很容易的、从开始学英语就会读的单词，但是问题是，我们真的读对了吗？
+
+在与外国人交流中，这些单词还真是读的有问题，为了发音更地道，将其记录下来，一起来纠正吧！
+
 ### period
 ### policy    political
 ### strategy
@@ -110,69 +114,3 @@ description: 英语发音纠正
     con- 卡恩    concert
     con- 肯      connect
     con- 康      country
-### interesting
-### catastrophe
-### procedure
-### advocate 
-### hospitality
-### versatile
-### entrepreneur
-### mortgage
-### hideous
-### reality
-### area
-### arena
-### excellent
-### forgive
-### ideally
-### tsunami    t is silent
-### volcano
-### debris    s is silent
-### done    down
-### pool    pull
-### fill    feel
-### appropriate
-### fond    found
-### fun    fan    fine
-### quaint
-### sound
-### inclination
-### devastate
-### neglect
-### social
-### subject
-### tendency
-### industry
-### preface
-### insomnia
-### arduous
-### diligence
-### error    err
-### faux pas
-### signify
-### saudi  arabia Dubai
-### Asia Afric
-### scenario
-### sarcastic
-### vodka
-### monument
-### usually usual
-### smog
-### popular
-### megacity
-### poverty
-### transportation
-### various
-### booming
-### acquisition
-### passion
-### class
-### curriculum
-### simultaneously
-### taboo
-### acclimate
-### john
-### jungle
-### helpful
-### fooled    food
-
