--- a/source/_posts/英语/口语练习注意点.md
+++ b/source/_posts/英语/口语练习注意点.md
@@ -11,16 +11,16 @@ description: Speaking like a native.
 
 1. **口语中不要带有太多`who/which/that`等从句连接词**
 
-    即使是外国人在口语中也难以理清这种关系。
+    >即使是外国人在口语中也难以理清这种关系。
 
 2. **朗读时，不要读太快**
 
-    控制好节奏，慢了才容易被理解。
+    >控制好节奏，慢了才容易被理解。
 
 3. **读单词时要注意单词重音**
 
-    对于音色纯正很有帮助。
+    >对于音色纯正很有帮助。
 
 4. **发音时要夸张一点**
 
-    该张大嘴就张开，不然很容易发成别的音，比如`hire/smile`。
+    >该张大嘴就张开，不然很容易发成别的音，比如`hire/smile`。
