Submit modifications of article “这些单词你都读对了吗？（二）”.

--- a/source/_posts/英语/这些单词你都读对了吗？（二）.md
+++ b/source/_posts/英语/这些单词你都读对了吗？（二）.md
@@ -77,4 +77,54 @@ description: 英语发音纠正
 ### jungle
 ### helpful
 ### fooled    food
-
+### authority
+### rational
+### annual
+### share
+### behavior behavioral
+### ceramic
+### paste
+### explosion
+### celebration
+### celebration
+### singer
+### firing
+### taunt
+### sarcasm
+### iron
+### wisdom
+### stamina
+### lsa
+    pay attention to Liaison
+### dazzling
+### pace
+### history    historical
+### mega
+### viva
+### Liaison
+### tribe
+### official
+### allegedly
+### ceremony
+### Volkswagen
+### Colloquialism
+### portfolio
+### represent
+### extraterrestrial
+### probe
+### borough
+### metropolis
+### colonial
+### manhattan
+### venues
+### avenue
+### nestle    nestled
+### staten
+### synonymous
+### quartz
+### fast
+### Malaysian 
+### overtone
+### Orlean
+### Mardi Gras
+    's' is silent
