--- a/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节1：算法概述；章节2：二分查找.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节1：算法概述；章节2：二分查找.md
@@ -1,4 +1,4 @@
-title: Binary Search 
+title: 1. Binary Search andd algorithm summary(算法概述和二分查找) 
 layout: post
 comment: true
 date: 2018-08-15 21:05:12
