update tags of personal blog

--- a/source/_posts/Programming/Algorithm_and_Data_Structure/Java/Play_Data_Structure/第一章 欢迎学习玩转数据结构 .md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/Java/Play_Data_Structure/第一章 欢迎学习玩转数据结构 .md
@@ -1,4 +1,4 @@
-title: 1. Welcom to study Data Structure(欢迎学习数据结构) 
+title: Welcom to study Data Structure
 layout: post
 comment: true
 date: 2018-08-17 16:28:51
@@ -8,10 +8,9 @@ keywords: data structure, introduction
 description: Introduction to data structure and some basic concepts
 ---
 
-# 第一章 欢迎学习玩转数据结构 
+# 欢迎学习玩转数据结构 
 
-## 1-1 欢迎学习《玩转数据结构》
-
+## 1-1 数据结构分类
 数据结构研究的是数据如何在计算机中进行组织和存储，使得我们可以**高效**的获取数据或者修改数据
 
 分类：
