--- a/source/_posts/Programming/Algorithm_and_Data_Structure/Java/Play_Data_Structure/第二章 不要小瞧数组.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/Java/Play_Data_Structure/第二章 不要小瞧数组.md
@@ -1,4 +1,4 @@
-title: 2. Do Not Look Down on Array(不要小瞧数组) 
+title: Do Not Look Down on Array(不要小瞧数组) 
 layout: post
 comment: true
 date: 2018-08-15 14:16:04
@@ -8,7 +8,7 @@ keywords: Array
 description: To code an Arraylist 
 ---
 
-# 第二章 不要小瞧数组
+# 不要小瞧数组
 
 ## 2-1 使用 Java 中的数组
 
