--- a/source/_posts/Programming/Algorithm_and_Data_Structure/C++/Play_Algorithm_and_Data_Structure/4章：堆和堆排序.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/C++/Play_Algorithm_and_Data_Structure/4章：堆和堆排序.md
@@ -3,7 +3,7 @@ layout: post
 comment: true
 date: 2019-04-28 11:16:02
 categories: [Programming,Algorithm_and_Data_Structure,C++,Play_Algorithm_and_Data_Structure]
-tags: [C++,Algorithm,Data Structure]
+tags: [C++,Algorithm,Data Structure,Sorting]
 keywords: Heap,IndexHeap,Tree
 ---
 
