--- a/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节3：选择排序.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节3：选择排序.md
@@ -3,7 +3,7 @@ layout: post
 comment: true
 date: 2018-08-15 20:11:23
 categories: [Programming,Algorithm_and_Data_Structure,Python,First_Bundle_of_Algorithm]
-tags: [Python,Algorithm,Data Structure]
+tags: [Python,Algorithm,Sorting]
 keywords: selection sorting
 description: About selection sorting
 ---
