add 'read more in articles and self-links'

--- a/source/_posts/Programming/Algorithm_and_Data_Structure/C++/Play_Algorithm_and_Data_Structure/4章：堆和堆排序.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/C++/Play_Algorithm_and_Data_Structure/4章：堆和堆排序.md
@@ -22,6 +22,9 @@ keywords: Heap,IndexHeap,Tree
     4. 堆就是优先队列，只要封装了对应的enqueue()和 dequeue()即可。入队也是从队尾入，但是入队后自身还会根据堆的性质进行调整，出队时还是从队首出，出队后也会进行调整
 
 ## 2. 堆的实现（以最大堆为例）
+
+<!-- more -->
+
 1. 基本理论
     1. 经典的堆实现是使用一棵“**完全**”二叉树；
     2. 二叉树中父节点必须都大于其子节点，但是并不说明层级高的节点都比层级低的节点值大（比如两个节点在同一个根节点的两个不同分支上，比如下图中 3 号节点替换成 23，这样它还比左子树的 4 号节点小，虽然层级比较高）；
