resize some pictures

--- a/source/_posts/Programming/Algorithm_and_Data_Structure/C++/Play_Algorithm_and_Data_Structure/4章：堆和堆排序.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/C++/Play_Algorithm_and_Data_Structure/4章：堆和堆排序.md
@@ -13,15 +13,13 @@ keywords: Heap,IndexHeap,Tree
 1. 优先队列（**动态**）：
     1. 操作系统任务调度（一次任务执行完，又来了新的任务或者旧任务的优先级发生了变化），如果使用一般排序，每次任务执行完都要重新排序一次；
     2. 游戏中选择第一攻击对象，并存入新增加的敌人，也是动态变化的；
-    3. 在 N个元素中选出前 M 个，一般排序：$O(NlogN)$; 优先队列：$O(NlogM)$;
+    3. 在 N个元素中选出前 M 个，一般排序：$O(NlogN)$; 优先队列：$O(NlogM)$;<!-- more -->
     4. 不同数据结构实现的优先队列的时间复杂度比较：
-    ![IMAGE](resources/5A77954373556D1946D82E9202A886B9.jpg)
-    1. 普通数组入队在最后添加即可，但是出队时要筛选出优先级最高的，并且要移动数组元素（扫描数组找到优先级最高的需要$O(n)$）, 之后移动元素也是$O(n)$，这两个阶段是分开进行的，不嵌套，所以时间复杂度为$O(2*n)$，非$O(n^2)$
-    2. 顺序数组，在入队时要维持顺序性，出队时直接就能取到优先级最高的
-    3. 普通数组和顺序数组，最差情况：$O(n^2)$; 堆：$O(nlogn)$
-    4. 堆就是优先队列，只要封装了对应的enqueue()和 dequeue()即可。入队也是从队尾入，但是入队后自身还会根据堆的性质进行调整，出队时还是从队首出，出队后也会进行调整
-
-<!-- more -->
+    <img src="resources/5A77954373556D1946D82E9202A886B9.jpg" alt="不同数据结构实现的优先队列的时间复杂度比较">
+    5. 普通数组入队在最后添加即可，但是出队时要筛选出优先级最高的，并且要移动数组元素（扫描数组找到优先级最高的需要$O(n)$）, 之后移动元素也是$O(n)$，这两个阶段是分开进行的，不嵌套，所以时间复杂度为$O(2*n)$，非$O(n^2)$
+    6. 顺序数组，在入队时要维持顺序性，出队时直接就能取到优先级最高的
+    7. 普通数组和顺序数组，最差情况：$O(n^2)$; 堆：$O(nlogn)$
+    8. 堆就是优先队列，只要封装了对应的enqueue()和 dequeue()即可。入队也是从队尾入，但是入队后自身还会根据堆的性质进行调整，出队时还是从队首出，出队后也会进行调整
 
 ## 2. 堆的实现（以最大堆为例）
 
@@ -36,7 +34,7 @@ keywords: Heap,IndexHeap,Tree
         3. 如果根节点存储在数组 0 位置，那么标号为 k 的左子节点是 2k+1,右子节点是 2k+2
 2. 二叉堆（最大堆）的实现
     1.  MaxHeap类封装
-        * ![IMAGE](resources/0DF63BFDB026FE9C7CD63B2AEBABD8E7.jpg)  
+        * <img src="resources/0DF63BFDB026FE9C7CD63B2AEBABD8E7.jpg" width="75%" height="75%" align="middle" alt="MaxHeap类封装">
     2. Shift Up 上浮操作，这里加入 52 这个新节点，比起父节点大，所以不满足最大堆性质，需要上浮；
         * ![IMAGE](resources/75229F40F9F22DB5AF646BBB4F66D400.jpg) 
         * ![IMAGE](resources/D820C8BC46F077DC983DD24A417C9043.jpg)
@@ -53,14 +51,13 @@ keywords: Heap,IndexHeap,Tree
             * ![IMAGE](resources/EC2FBB69CF578CE1CF8BEF0A51A013DC.jpg)
         * 直到 16 比其左右子节点都大为止
             * ![IMAGE](resources/15300D53443E9AE3985189D9BE5FA41B.jpg)
-    3. insert(): 添加时要进行容量检查，看是否有空间还能容纳新元素，所以可以设置一个 capacity 变量；添加后要进行 Shift Up 操作--添加的元素总在数组最后一位，即 count 计数所在位置，从这里开始执行上浮操作；
-        * ![IMAGE](resources/9E2C77898D96CE63B3AC187E4B28C9C1.jpg)
-    4. shiftUp();算法复杂度$O(logn)$
-        * ![IMAGE](resources/05A0FCFD71B45961C7E5A08695452FB2.jpg) 
-
-    5. 删除元素
-        * ![IMAGE](resources/56A172F210FE7D6B366B7078EEF8FA32.jpg)
-    6. ShiftDown;算法复杂度$O(logn)$
+    4.  insert(): 添加时要进行容量检查，看是否有空间还能容纳新元素，所以可以设置一个 capacity 变量；添加后要进行 Shift Up 操作--添加的元素总在数组最后一位，即 count 计数所在位置，从这里开始执行上浮操作；
+        * <img src="resources/9E2C77898D96CE63B3AC187E4B28C9C1.jpg" width="50%" height="50%" align="middle" alt="insert()">
+    5.  shiftUp();算法复杂度$O(logn)$
+        * <img src="resources/05A0FCFD71B45961C7E5A08695452FB2.jpg" width="75%" height="75%" align="middle" alt="shiftUp()">
+    6.  删除元素
+        * <img src="resources/56A172F210FE7D6B366B7078EEF8FA32.jpg" width="65%" height="65%" align="middle" alt="删除元素">
+    7.  ShiftDown;算法复杂度$O(logn)$
         * 首先判断这个替换节点（删除一个节点后从叶子上取出的那个节点）存在，即 2*k <= count，这里只判断左孩子存在即可（对一个完全二叉树，如果有子节点，左孩子肯定存在），此时说明有下沉的可能；然后再判断右孩子是否存在，如果存在，那么判断左右孩子哪个比较大，取出大的与根节点比较，如果根节点小于它，那么进行交换；否则，说明根节点比左右孩子都大，不用下沉；
         * ![IMAGE](resources/07E32A0423EF06E09F36D46F142A4201.jpg)
         * 潜在优化，可以先循环找到最终与谁进行交换，不用每次都交换；
