correct table display in markdown

--- a/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节1：算法概述；章节2：二分查找.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节1：算法概述；章节2：二分查找.md
@@ -5,6 +5,7 @@ date: 2018-08-15 21:05:12
 categories: [Programming,Algorithm_and_Data_Structure,Python,First_Bundle_of_Algorithm]
 tags: [Python,Algorithm,Data Structure]
 keywords: binary_search
+
 description: About algorithm complexity and binary search
 ---
 
@@ -70,11 +71,11 @@ print binary_search(my_list, 3)
 1. 二分查找： 对数时间
 2. 简单查找： 线性时间
 
-| 简单查找   | 二分查找    |
-| ---- | ----- | ---- |
-| 100个元素（100次）   | 7次 |
-| 40亿个元素（40亿次）   | 32次 |
-| O(n)即 O(n) = n  | O($log_2^n$) 即 O(n) = $log_2^n$   |
+| 简单查找              | 二分查找                           |
+|-----------------------|------------------------------------|
+| 100个元素（100次）    | 7次                                |
+| 40亿个元素（40亿次）  | 32次                               |
+| O($n$)即 O($n$) = $n$ | O($log_2^n$) 即 O($n$) = $log_2^n$ |
 
 *大 O 表示法是表示的算法最坏的情况下运算的时间（上面运算的次数就相当于运算的时间）*
 
