modify articles in first bundle of algorithm

--- a/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节1：算法概述；章节2：二分查找.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节1：算法概述；章节2：二分查找.md
@@ -1,4 +1,4 @@
-title: 1. Binary Search and algorithm summary(算法概述和二分查找) 
+title: 1. Binary Search and 2. algorithm summary(算法概述和二分查找) 
 layout: post
 comment: true
 date: 2018-08-15 21:05:12
@@ -9,7 +9,7 @@ keywords: binary_search
 description: About algorithm complexity and binary search
 ---
 
-## 2.1 二分查找(binary_search)
+## 1 二分查找(binary_search)
 
 100个数字顺序排列，如果要找到100这个数，要查找100次，使用二分查找，则只需要7次，因为：
 
@@ -40,7 +40,7 @@ else //guess == item
   return mid            //找到了, 【返回下标即位置，注意第一个元素下标是0，所以返回0表示第一个元素】
 ```
 
-## 2.2 二分法与大 O 表示法
+## 2 二分法与大 O 表示法
 
 python 源码实现：
 
