turn on canvas_ribbon and Note (Bootstrap Callout)

--- a/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节5：散列表.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节5：散列表.md
@@ -8,9 +8,13 @@ keywords: hash table
 description: About hash table
 ---
 
+{% note default %}
 ## 5.1 散列表简介
+{% endnote %}
 
+{% note info %}
 **散列表**：一种数据结构，与数组和链表不同
+{% endnote %}
 
 散列表的内部机制：实现、冲突和散列函数
 
@@ -22,11 +26,14 @@ description: About hash table
 
 前面讲了两种数据结构：数组和链表，其实前面讲的栈也是一种数据结构，但是栈主要用于存储，并不用于查找，所以这里说数据结构，主要还是指数组和链表。但是上面的例子基于数组的数据结构的查找，不是很快，而散列表这种数据结构可以解决这个问题。
 
+{% note default %}
 ## 5.2 散列函数
+{% endnote %}
 
+{% note info %}
 **函数**：即映射，把输入 x 通过一定方式映射到 输出y
-
 **散列函数**：一种特殊的函数
+{% endnote %}
 
 | x    | --> | y |
 |------|-----|---|
@@ -56,10 +63,13 @@ description: About hash table
 
 散列表使得查找无序元素跟从数组中获取某一个下标的元素一样快，都是$O(1)$
 
+{% note default %}
 ## 5.3 python 实现散列表和使用
+{% endnote %}
 
-字典：[key: value]  dict()
-**字典**可以理解成是**散列表**进行**封装**之后的结构，封装隐藏了中间散列函数映射成数组索引的过程，所以字典直接通过查找就能直接得到最终的水果价格。
+{% note info %}
+**字典**：[key: value]  dict()，**字典**可以理解成是**散列表**进行**封装**之后的结构，封装隐藏了中间散列函数映射成数组索引的过程，所以字典直接通过查找就能直接得到最终的水果价格。
+{% endnote %}
 
 ```python
 book = dict()           //字典、散列表定义
