--- a/source/_posts/Programming/Algorithm_and_Data_Structure/Java/Play_Data_Structure/第二章 不要小瞧数组.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/Java/Play_Data_Structure/第二章 不要小瞧数组.md
@@ -5,7 +5,7 @@ date: 2018-08-15 14:16:04
 categories: [Programming,Algorithm_and_Data_Structure,Java, Play_Data_Structure]
 tags: [Java,Algorithm,Data Structure]
 keywords: Array
-description: To code an Arraylist 
+description: <div class="note info"><p>To code an Arraylist </p></div>
 ---
 
 # 不要小瞧数组
@@ -150,7 +150,7 @@ public class Array{
             size ++;
         }   
 }
-```
+ ```
 ## 2-4 数组中查询和修改元素
 ```Java
 public class Array{
