--- a/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节1：算法概述；章节2：二分查找.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节1：算法概述；章节2：二分查找.md
@@ -6,7 +6,7 @@ categories: [Programming,Algorithm_and_Data_Structure,Python,First_Bundle_of_Alg
 tags: [Python,Algorithm,Data Structure]
 keywords: binary_search
 
-description: About algorithm complexity and binary search
+description: <div class="note info"><p>About algorithm complexity and binary search</p></div>
 ---
 
 ## 1 二分查找(binary_search)
