--- a/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节3：选择排序.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节3：选择排序.md
@@ -6,7 +6,7 @@ categories: [Programming,Algorithm_and_Data_Structure,Python,First_Bundle_of_Alg
 tags: [Python,Algorithm,Sorting]
 keywords: selection sorting
 
-description: About selection sorting
+description: <div class="note info"><p>About selection sorting</p></div>
 ---
 
 ## 3.1 数组和链表
