--- a/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节4：快速排序.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节4：快速排序.md
@@ -6,7 +6,7 @@ categories: [Programming,Algorithm_and_Data_Structure,Python,First_Bundle_of_Alg
 tags: [Python,Algorithm,Sorting]
 keywords: quick sorting
 
-description: About quick sorting
+description: <div class="note info"><p>About quick sorting</p></div>
 ---
 
 ## 4.1 递归
