--- a/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节5：散列表.md
+++ b/source/_posts/Programming/Algorithm_and_Data_Structure/Python/First_Bundle_of_Algorithm/章节5：散列表.md
@@ -5,7 +5,7 @@ date: 2018-08-16 8:21:45
 categories: [Programming,Algorithm_and_Data_Structure,Python,First_Bundle_of_Algorithm]
 tags: [Python,Algorithm,Data Structure]
 keywords: hash table
-description: About hash table
+description: <div class="note info"><p>About hash table</p></div>
 ---
 
 {% note default %}
@@ -15,6 +15,7 @@ description: About hash table
 {% note info %}
 **散列表**：一种数据结构，与数组和链表不同
 {% endnote %}
+<!-- more -->
 
 散列表的内部机制：实现、冲突和散列函数
 
