--- a/source/_posts/感悟/态度.md
+++ b/source/_posts/感悟/态度.md
@@ -5,7 +5,7 @@ date: 2015-11-29 19:04:43
 categories: 感悟
 tags: [Life]
 keywords: life,attitude
-description: This is my life attitude.
+description: <div class="note info"><p>This is my life attitude.</p></div>
 ---
 ### “明知不可为而为之，权且叫态度吧”
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; -- **秋野**
