--- a/source/_posts/英语/口语练习注意点.md
+++ b/source/_posts/英语/口语练习注意点.md
@@ -5,7 +5,7 @@ date: 2015-07-12 18:59:11
 categories: 英语
 tags: [English,speaking]
 keywords: Oral Principle
-description: Speaking like a native.
+description: <div class="note info"><p>Speaking like a native.</p></div>
 ---
 切身体会，口语尽量还是简单点好，简单并不代表缺少变化，句型还是很丰富的，这样听起来才像个**native**。
 
