--- a/source/_posts/英语/这些单词你都读对了吗？（一）.md
+++ b/source/_posts/英语/这些单词你都读对了吗？（一）.md
@@ -5,7 +5,7 @@ date: 2015-08-06 20:22:45
 categories: 英语
 tags: [English]
 keywords: pronunciation
-description: 英语发音纠正
+description: <div class="note info"><p>英语发音纠正</p></div>
 ---
 这里面有我们常见的、很容易的、从开始学英语就会读的单词，但是问题是，我们真的读对了吗？
 
