--- a/source/_posts/英语/这些单词你都读对了吗？（二）.md
+++ b/source/_posts/英语/这些单词你都读对了吗？（二）.md
@@ -5,7 +5,7 @@ date: 2015-08-17 11:35:36
 categories: 英语
 tags: [English]
 keywords: pronouncation
-description: 英语发音纠正
+description: <div class="note info"><p>英语发音纠正</p></div>
 ---
 这是本系列的第二篇。
 
