--- a/source/_posts/英语/听力练习注意点.md
+++ b/source/_posts/英语/听力练习注意点.md
@@ -5,7 +5,7 @@ date: 2015-07-10 16:07:15
 categories: 英语
 tags: [English,listening]
 keywords: Listening
-description: Listening practice principle.
+description: <div class="note info"><p>Listening practice principle.</p></div>
 ---
 1. **不要试图听懂每一个词，重点关注句子的重点单词**
 
